[gd_scene load_steps=14 format=3 uid="uid://d2ahme0nrumhy"]

[ext_resource type="Script" path="res://Scripts/BoardOverlay.gd" id="1_4a5n6"]
[ext_resource type="Texture2D" uid="uid://ty2ekqkwt1mb" path="res://Arts/Gfx/Board/board.png" id="1_ah41p"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_f3kqo"]
[ext_resource type="PackedScene" uid="uid://deac0ul1h72g8" path="res://Scenes/deck_display.tscn" id="3_8b4gb"]
[ext_resource type="PackedScene" uid="uid://p31d8x3u5qus" path="res://Scenes/player_score_panel.tscn" id="4_3x01f"]
[ext_resource type="PackedScene" uid="uid://b3ps20yf6g8vx" path="res://Scenes/game_over_panel.tscn" id="5_aflaq"]
[ext_resource type="Texture2D" uid="uid://771h0pty250w" path="res://Arts/Gfx/Menu/ishid-o-matic-title.png" id="5_g0j1r"]
[ext_resource type="Theme" uid="uid://0js83h3tu5ft" path="res://ishido-base.tres" id="6_uawno"]
[ext_resource type="PackedScene" uid="uid://dqqc553edp67k" path="res://Scenes/game_win_panel.tscn" id="8_fy08i"]
[ext_resource type="PackedScene" uid="uid://cwmeqnmocd8lr" path="res://Scenes/game_quitconfirm_panel.tscn" id="9_akd7t"]
[ext_resource type="PackedScene" uid="uid://bxlrwdfth54dw" path="res://Scenes/test_panel.tscn" id="11_s4t3q"]
[ext_resource type="PackedScene" uid="uid://cwfcdv52iraox" path="res://Scenes/final_score_panel.tscn" id="11_vro1l"]
[ext_resource type="PackedScene" uid="uid://bv1go035hdja2" path="res://Scenes/final_score_panel_2.tscn" id="12_kdsd7"]

[node name="Game" type="Node2D"]
auto_translate_mode = 1
script = ExtResource("1_f3kqo")
base_board = PackedVector2Array(0, 0, 11, 0, 0, 7, 11, 7, 5, 3, 6, 4)
board_width = 12
board_height = 8
x_start = 8
y_start = 248
tile_size = 64

[node name="BoardOverlay" type="Node2D" parent="."]
z_index = 5
script = ExtResource("1_4a5n6")

[node name="Board" type="TextureRect" parent="."]
auto_translate_mode = 2
z_index = -1
offset_right = 40.0
offset_bottom = 40.0
localize_numeral_system = false
texture = ExtResource("1_ah41p")

[node name="UI" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
offset_right = 780.0
offset_bottom = 268.0

[node name="Player1ScoreMargin" type="MarginContainer" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Player_subPanel" parent="UI/HBoxContainer/Player1ScoreMargin" instance=ExtResource("4_3x01f")]
layout_mode = 2
playerLabel = "GAMEPLAYERONE"

[node name="MiddleContainer" type="VBoxContainer" parent="UI/HBoxContainer"]
custom_minimum_size = Vector2(380, 232)
layout_mode = 2

[node name="LogoMargin" type="MarginContainer" parent="UI/HBoxContainer/MiddleContainer"]
custom_minimum_size = Vector2(460, 140)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = -32

[node name="LogoTexture" type="TextureRect" parent="UI/HBoxContainer/MiddleContainer/LogoMargin"]
custom_minimum_size = Vector2(460, 160)
layout_mode = 2
texture = ExtResource("5_g0j1r")
expand_mode = 5
stretch_mode = 5

[node name="Tournament-Label" type="Label" parent="UI/HBoxContainer/MiddleContainer"]
visible = false
layout_mode = 2
theme = ExtResource("6_uawno")
text = "GAMETOURLABEL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DataDisplay" type="Label" parent="UI/HBoxContainer/MiddleContainer"]
auto_translate_mode = 1
layout_mode = 2
theme = ExtResource("6_uawno")
text = "Highlight Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2ScoreMargin" type="MarginContainer" parent="UI/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Player_subPanel" parent="UI/HBoxContainer/Player2ScoreMargin" instance=ExtResource("4_3x01f")]
layout_mode = 2
playerIdx = 2
playerLabel = "GAMEPLAYERTWO"

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 768.0
offset_top = 232.0
offset_right = 768.0
offset_bottom = 232.0

[node name="DeckDisplay" parent="UI/VBoxContainer" instance=ExtResource("3_8b4gb")]

[node name="grid" type="Node2D" parent="."]

[node name="GameOverPanel" parent="." instance=ExtResource("5_aflaq")]
visible = false
z_index = 4

[node name="GameWinPanel" parent="." instance=ExtResource("8_fy08i")]
visible = false
z_index = 4

[node name="GameQuitPanel" parent="." instance=ExtResource("9_akd7t")]
visible = false
z_index = 4

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(1024, 768)
offset_right = 1024.0
offset_bottom = 768.0
mouse_filter = 2

[node name="FinalScore Panel 2" parent="CenterContainer" instance=ExtResource("12_kdsd7")]
visible = false
layout_mode = 2

[node name="FinalScorePanel" parent="CenterContainer" instance=ExtResource("11_vro1l")]
auto_translate_mode = 1
visible = false
z_index = 4
layout_mode = 2

[node name="Test Panel" parent="CenterContainer" instance=ExtResource("11_s4t3q")]
visible = false
layout_mode = 2

[connection signal="highlight_board_cell" from="." to="BoardOverlay" method="_on_game_highlight_board_cell"]
[connection signal="deck_empty" from="UI/VBoxContainer/DeckDisplay" to="." method="_on_deck_display_deck_empty"]
[connection signal="is_closed" from="GameOverPanel" to="." method="_on_game_over_panel_is_closed"]
[connection signal="is_closed" from="GameWinPanel" to="." method="_on_game_win_panel_is_closed"]
[connection signal="quit" from="GameQuitPanel" to="." method="_on_game_quit_panel_quit"]
[connection signal="is_closed" from="CenterContainer/FinalScorePanel" to="." method="_on_final_score_panel_is_closed"]
